# GeoChecker

./: .gitignore  LICENSE  README.md  pyproject.toml
src/GeoChecker/: cli.py  main.py
src/GeoChecker/check/: Check.py  GeoChecker.py  SuperpositionCheck.py
src/GeoChecker/utils/: GrassCoreAPI.py  UtilMisc.py  Visualizer.py
