[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GeoChecker"
version = "0.1.0"
description = "A CLI that checks errors between WEAP and a Linkage File meant for a WEAP-MODFLOW model. To create a Linkage File refer to GeoLinkage."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [{ name = "Antonio Andrés Torga Mellado", email = "antonio.torga@ug.uchile.cl" }]
dependencies = [
                "typer>=0.12",
                "matplotlib",
                "seaborn",
                "pandas",
                "grass-session"
                ]

[project.scripts]
geochecker = "GeoChecker.cli:app"

[tool.black]
line-length = 88